--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
   "name": "goit-node-cli",
   "version": "1.0.0",
-  "description": "",
+  "description": "goit-node-cli",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon index"
+    "start": "node index"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "commander": "^12.0.0",
     "nanoid": "^5.0.6"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.0",
-    "ts-node": "^10.9.2"
   }
 }
